k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-ingress
  namespace: finance-manager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: finance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finance-app
                port:
                  number: 8080
